--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <p><strong>Universitas:</strong> Universitas Hasanuddin</p>
       <p><strong>Email:</strong> trisalpampang@gmail.com</p>
       <p><strong>No. HP:</strong> 085299321866</p>
-      <p><strong>Alamat:</strong> Jl. Cypress View No.62]</p>
+      <p><strong>Alamat:</strong> Jl. Cypress View No.62</p>
       <p><strong>Hobi:</strong> Hiking, Traveling</p>
     </div>
   </div>
