--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     /* Animasi bunga/unicorn */
     body::after {
-      content: "";
+      content: "59e672b47a10a3cb8043bdf72139dcbe.jpg";
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
