--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     /* Background gradient pastel */
     body::before {
-      content: "";
+      content: "59e672b47a10a3cb8043bdf72139dcbe.jpg";
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
