--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     /* Background gradient pastel */
     body::before {
-      content: "59e672b47a10a3cb8043bdf72139dcbe.jpg";
+      content: "";
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
@@ -31,7 +31,7 @@
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background-image: url('h59e672b47a10a3cb8043bdf72139dcbe.jpg'); /* gambar unicorn/bunga */
+      background-image: url(''); /* gambar unicorn/bunga */
       background-repeat: repeat;
       background-size: 200px;
       opacity: 0.15;
